external-crates/move/crates/move-compiler/tests/development/extensions/invalid_address@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E02004]: invalid 'module' declaration
  ┌─ tests/development/extensions/invalid_address.move:6:1
  │  
6 │ ╭ extend asdf::m {
7 │ │     public fun g(): u64 { 1 }
8 │ │ }
  │ ╰─^ Cannot extend unknown module 'asdf::m'

error[E03001]: address with no value
  ┌─ tests/development/extensions/invalid_address.move:6:8
  │
6 │ extend asdf::m {
  │        ^^^^ address 'asdf' is not assigned a value. Try assigning it a value when calling the compiler
